[gd_scene load_steps=19 format=3 uid="uid://cjy60mv75hnb8"]

[ext_resource type="Theme" uid="uid://cqccs7gpefk5s" path="res://assets/fonts/Font themes/Main_font.tres" id="1_43c2g"]
[ext_resource type="Script" uid="uid://td52shgd71o2" path="res://ui/menus/layouts/pixel_art/settings/settings_menu.gd" id="1_ijo35"]
[ext_resource type="PackedScene" uid="uid://c7x5g1yqaqlni" path="res://ui/menus/layouts/pixel_art/components/menu_display_panel.tscn" id="1_rdl7v"]
[ext_resource type="Script" uid="uid://6ppxvpxu6gg" path="res://ui/menus/components/option_button/language_selector_option_button.gd" id="2_ehdbh"]
[ext_resource type="LabelSettings" uid="uid://2eihg2k5xqp6" path="res://ui/menus/layouts/pixel_art/theme/label_configurations/menu_settings_label.tres" id="2_hmfuu"]
[ext_resource type="Script" uid="uid://dgjkur7tqncp4" path="res://ui/menus/components/label/project_version.gd" id="3_1406n"]
[ext_resource type="Texture2D" uid="uid://3i7ucj3a1wgv" path="res://assets/textures/blurred.jpg" id="3_bls7m"]
[ext_resource type="Texture2D" uid="uid://1pdniev668cm" path="res://assets/geometry/arrows/medium_left.png" id="4_eqof2"]
[ext_resource type="Script" uid="uid://c7xflsrumdoya" path="res://ui/menus/layouts/pixel_art/components/menu_back_button.gd" id="5_144fo"]
[ext_resource type="Script" uid="uid://dadaarnbffwuu" path="res://ui/menus/layouts/pixel_art/button.gd" id="6_43c2g"]
[ext_resource type="AudioStream" uid="uid://b4svfxoqkn2r4" path="res://assets/Audio/SE/427870__lavacoal123__mechanical-menu-button-press.wav" id="7_6faml"]
[ext_resource type="PackedScene" uid="uid://g2lmd0sjdv3b" path="res://ui/menus/layouts/pixel_art/settings/display_settings_menu.tscn" id="9_qvtp0"]
[ext_resource type="PackedScene" uid="uid://d3hipq38pqrtm" path="res://ui/menus/layouts/pixel_art/settings/audio_settings_menu.tscn" id="10_tfv4f"]
[ext_resource type="PackedScene" uid="uid://dloly10h6i6tl" path="res://ui/menus/layouts/pixel_art/settings/accessibility_menu.tscn" id="11_iy83o"]
[ext_resource type="PackedScene" uid="uid://k6jdunvu56uj" path="res://ui/menus/layouts/pixel_art/settings/control_settings_menu.tscn" id="12_26lpu"]
[ext_resource type="AudioStream" uid="uid://cv7v1fyc6ancx" path="res://assets/Audio/SE/150214__pumodi__menu-move-2.mp3" id="12_bls7m"]
[ext_resource type="AudioStream" uid="uid://b7nksrxl052nv" path="res://assets/Audio/SE/571579__el_boss__metallic-game-menu-ping-variation-2.wav" id="13_3j3s0"]

[sub_resource type="LabelSettings" id="LabelSettings_h6413"]
font_color = Color(0.419813, 0.419813, 0.419813, 1)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_43c2g")
script = ExtResource("1_ijo35")

[node name="TemporaryBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_bls7m")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="Version" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "1.0.0"
label_settings = SubResource("LabelSettings_h6413")
script = ExtResource("3_1406n")

[node name="BackButton" type="Button" parent="MarginContainer" node_paths=PackedStringArray("linked_menu")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("4_eqof2")
script = ExtResource("5_144fo")
linked_menu = NodePath("../..")
sound_effect = ExtResource("7_6faml")

[node name="MenuDisplayPanel" parent="." instance=ExtResource("1_rdl7v")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
mouse_filter = 1

[node name="Label" parent="MenuDisplayPanel" index="0"]
text = "MENU SETTINGS"
label_settings = null

[node name="SettingsMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 175
theme_override_constants/margin_top = 85
theme_override_constants/margin_right = 175
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="SettingsMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SETTINGS_LANGUAGE"
label_settings = ExtResource("2_hmfuu")

[node name="LanguageSelector" type="OptionButton" parent="SettingsMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../ControlsSettingsButton")
focus_neighbor_bottom = NodePath("../../DisplaySettingsButton")
mouse_filter = 1
script = ExtResource("2_ehdbh")

[node name="HSeparator" type="HSeparator" parent="SettingsMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplaySettingsButton" type="Button" parent="SettingsMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "MENU_SETTINGS_DISPLAY"
script = ExtResource("6_43c2g")
sound_effect = ExtResource("12_bls7m")
hover_sound_effect = ExtResource("13_3j3s0")

[node name="AudioSettingsButton" type="Button" parent="SettingsMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "MENU_SETTINGS_AUDIO"
script = ExtResource("6_43c2g")
sound_effect = ExtResource("12_bls7m")
hover_sound_effect = ExtResource("13_3j3s0")

[node name="AccessibilitySettingsButton" type="Button" parent="SettingsMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "MENU_SETTINGS_ACCESSIBILITY"
script = ExtResource("6_43c2g")
sound_effect = ExtResource("12_bls7m")
hover_sound_effect = ExtResource("13_3j3s0")

[node name="ControlsSettingsButton" type="Button" parent="SettingsMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../HBoxContainer/LanguageSelector")
theme_override_font_sizes/font_size = 16
text = "MENU_SETTINGS_CONTROLS"
script = ExtResource("6_43c2g")
sound_effect = ExtResource("12_bls7m")
hover_sound_effect = ExtResource("13_3j3s0")

[node name="DisplaySettingsMenu" parent="." instance=ExtResource("9_qvtp0")]
visible = false
layout_mode = 1

[node name="AudioSettingsMenu" parent="." instance=ExtResource("10_tfv4f")]
visible = false
layout_mode = 1

[node name="AccessibilitySettingsMenu" parent="." instance=ExtResource("11_iy83o")]
visible = false
layout_mode = 1

[node name="ControlSettingsMenu" parent="." instance=ExtResource("12_26lpu")]
visible = false
layout_mode = 1

[editable path="MenuDisplayPanel"]
